--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-DISCORD_TOKEN=PUT_TOKEN_HERE
-CLIENT_ID=PUT_APPLICATION_ID_HERE
-GUILD_ID=PUT_CHANNEL_ID_HERE
-LADDER_CHANNEL_ID=PUT_LADDER_CHANNEL_ID_HERE
-RACE_DIRECTOR_ROLE_ID=PUT_ROLE_ID_HERE
+DISCORD_TOKEN=
+CLIENT_ID=
+GUILD_ID=
+LADDER_CHANNEL_ID=
+RACE_DIRECTOR_ROLE_ID=
 REQUIRE_LADDER_CHANNEL=true
+
+# === TOP 10 LEADERBOARD ===
+TOP10_APPROVAL_CHANNEL_ID=
+TOP10_LEADERBOARD_CHANNEL_ID=
+TOP10_ROLE_ID=
+
+# optional
+TOP10_REQUIRE_PROOF=true
